# tidypolars-extra

./: .gitignore  CHANGELOG.md  CLAUDE.md  EVALUATION.md  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  conf.py  index.md  installation.md  releases.md  releases.org  requirements.txt
docs/_css/: extra.css  stylesheets.css
docs/_static/: custom.css
docs/case-studies/: #regression-table.py#  additional-verbs.md  conditionals.md  joins.md  pivot-wide.md  pivot-wide.org  regression-table.md  regression-table.org  reshaping.md  set-operations.md  slicing.md  src-regression-table.py  standardizing.md  standardizing.org  window-functions.md
docs/performance/: #pivot-wide.md#  filter.md  filter.org  pivot-wide.md  pivot-wide.org  src-filter.py  src-pivot-wide.py  summarise.md  summarise.org  template.org
docs/src/: gen_ref_pages.py  performance.py
docs/src/data/: example-1-header.xlsx  example-2-headers.xlsx  example-3-headers.xlsx  mtcars-labels.Rdata  mtcars-labels.dta  mtcars-labels.sav  mtcars.dta  mtcars.rds  mtcars.sav
docs/usage/: from-to-pandas-polars.md  from-to-pandas-polars.org  installation.md  installation.org  read.md  read.org  usage.md  usage.org  write.md  write.org
docs/usage/data-manipulation/: #read-write.md#  mutate.md  mutate.org
docs/usage/reporting/: to-latex.md
docs/usage/statistics/: freq.md  freq.org  tab.md
docs/vignettes/: 00_overview.ipynb  00_overview.md  01_filter.ipynb  01_filter.md  02_arrange.ipynb  02_arrange.md  03_select.ipynb  03_select.md  04_rename.ipynb  04_rename.md  05_mutate.ipynb  05_mutate.md  06_transmute.ipynb  06_transmute.md  07_summarize.ipynb  07_summarize.md  08_group_by.ipynb  08_group_by.md
docs_sphinx/: Makefile  comparison.rst  conf.py  getting_started.md  index.rst  requirements.txt
docs_sphinx/_static/: custom.css
docs_sphinx/_static/css/: custom.css
docs_sphinx/api/: dates.rst  functions.rst  helpers.rst  index.rst  io.rst  statistics.rst  strings.rst  tibble.rst  type_conversion.rst
docs_sphinx/comparisons/: index.md  vs_pandas.md  vs_siuba.md
docs_sphinx/guide/: arrange.rst  filter.rst  index.md  joins.rst  mutate.rst  overview.rst  reshape.rst  select.rst  summarize.rst  verb_arrange.md  verb_dates.md  verb_filter.md  verb_group_by.md  verb_joins.md  verb_mutate.md  verb_reshape.md  verb_select.md  verb_strings.md  verb_summarize.md
tests/: test_coverage_extra.py  test_funs.py  test_groupby.py  test_helpers_extra.py  test_lubridate.py  test_lubridate_extra.py  test_new_features.py  test_stats.py  test_stringr.py  test_stringr_extra.py  test_tibble.py  test_tibble_extra.py  test_tidyselect.py  test_type_conversion_extra.py
tidypolars4sci/: __init__.py  funs.py  helpers.py  io.py  stats.py  tibble_df.py
tidypolars4sci/data/: __init__.py
tidypolars4sci_ext/: __init__.py  ext_funs.py  ext_helpers.py  ext_stats.py  ext_tibble.py
tidypolars_extra/: __init__.py  forcats.py  funs.py  helpers.py  io.py  io_r.py  lubridate.py  reexports.py  stats.py  stringr.py  tibble_df.py  utils.py
tidypolars_extra/data/: __init__.py  flights.py  iris.py  mtcars.py  penguins.py  starwars.py  starwars.rda  wine.csv  wine.py
