[build-system]
requires = ["hatchling"]           # when with internet access
build-backend = "hatchling.build"  # when with internet access
# requires = ["setuptools", "wheel"]     # When offline
# build-backend = "setuptools.build_meta"# When offline


[project]
name = "tidypolars-extra"
version = "0.0.1.22"
description = "An extension to tidypolars4sci with additional functionalities for scientific data analysis."
authors = [{name = "Diogo Ferrari", email = "diogoferrari@gmail.com"}]
maintainers = [{name = "Diogo Ferrari", email = "diogoferrari@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["polars", "tidyverse", "dataframe", "tidy data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering"
]
dependencies = [
	     "numpy",
	     "pandas",
	     # "polars==1.30",
	     "polars",
	     "pyarrow",
	     "pyreadr",
	     "pyreadstat",
]

[tool.setuptools.package-data]
tidypolars_extra.data = ["*.csv", "*.rda"]

[project.urls]
Homepage = "https://github.com/mdmanurung/tidypolars-extra"
Documentation = "https://github.com/mdmanurung/tidypolars-extra"
Changelog = "https://github.com/mdmanurung/tidypolars-extra/blob/master/CHANGELOG.md"
Issues = "https://github.com/mdmanurung/tidypolars-extra/issues/"